# rene

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  _typos.toml  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-setup.txt  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
rene/: __init__.py  __init__.pyi  _constants.py  _context.py  _enums.py  _hints.py  _rene.py  _utils.py  constants.py  enums.py  exact.py  exact.pyi  hints.py
rene/_bentley_ottmann/: base.py  event.py  events_queue_key.py  events_registry.py  hints.py  sweep_line_key.py  utils.py
rene/_clipping/: __init__.py  constants.py  difference.py  event.py  events_queue_key.py  intersection.py  linear.py  mixed.py  operation.py  overlap_kind.py  shaped.py  sweep_line_key.py  symmetric_difference.py  union.py  utils.py
rene/_delaunay/: mesh.py  quad_edge.py  triangulation.py  vertices.py
rene/_exact/: __init__.py  box.py  context.py  contour.py  empty.py  multipolygon.py  multisegment.py  point.py  polygon.py  segment.py  trapezoidation.py  triangulation.py  utils.py
rene/_exact/bentley_ottmann/: base.py  event.py  events_queue_key.py  events_registry.py  sweep_line_key.py  utils.py
rene/_geometries/: base_box.py  base_compound.py  base_contour.py  base_empty.py  base_multipolygon.py  base_multisegment.py  base_point.py  base_polygon.py  base_segment.py  utils.py
rene/_relating/: contour.py  event.py  events_queue_key.py  linear.py  mixed.py  multipolygon.py  multisegment.py  multisegmental.py  polygon.py  segment.py  segment_endpoints.py  shaped.py  sweep_line_key.py  utils.py
rene/_seidel/: edge.py  leaf.py  node.py  trapezoid.py  trapezoidation.py  x_node.py  y_node.py
rene/_trapezoidation/: edge.py  leaf.py  node.py  trapezoid.py  trapezoidation.py  x_node.py  y_node.py
rene/_triangulation/: constrained_delaunay.py  delaunay.py  mesh.py  quad_edge.py  vertices.py
src/: bounded.rs  constants.rs  contracts.rs  geometries.rs  iteration.rs  lib.rs  locatable.rs  operations.rs  oriented.rs  relatable.rs  slice_sequence.rs  traits.rs
src/bentley_ottmann/: base.rs  event.rs  events_queue.rs  events_queue_key.rs  events_registry.rs  mod.rs  sweep.rs  sweep_line.rs  sweep_line_key.rs  traits.rs
src/binding/: cexact.rs  conversion.rs  crene.rs  generic_iterator.rs  impl_box_wrapper.rs  impl_constrained_delaunay_triangulation_wrapper.rs  impl_contour_wrapper.rs  impl_delaunay_triangulation_wrapper.rs  impl_empty_wrapper.rs  impl_multipolygon_wrapper.rs  impl_multisegment_wrapper.rs  impl_point_wrapper.rs  impl_polygon_wrapper.rs  impl_py_sequence.rs  impl_segment_wrapper.rs  impl_trapezoidation_wrapper.rs  mod.rs  packing.rs  reference.rs  slicing.rs  traits.rs  unpacking.rs
src/bounded/: eq.rs  hash.rs  mod.rs  partial_eq.rs  relatable.rs  traits.rs  types.rs
src/clipping/: event.rs  events_queue_key.rs  intersection.rs  linear.rs  mixed.rs  mod.rs  operation.rs  operation_kind.rs  shaped.rs  sweep_line_key.rs  traits.rs  types.rs  union.rs
src/delaunay/: contracts.rs  mesh.rs  mod.rs  quad_edge.rs  quad_edge_registry.rs  triangulation.rs
src/geometries/: constants.rs  contracts.rs  mod.rs  operations.rs  utils.rs
src/geometries/contour/: bounded.rs  contoural.rs  contoural2.rs  difference.rs  eq.rs  from.rs  hash.rs  intersection.rs  locatable.rs  mod.rs  multisegmental.rs  multisegmental2.rs  multivertexal.rs  multivertexal2.rs  oriented.rs  partial_eq.rs  relatable.rs  symmetric_difference.rs  to_reversed_segments.rs  types.rs  union.rs
src/geometries/empty/: default.rs  difference.rs  from.rs  intersection.rs  locatable.rs  mod.rs  relatable.rs  symmetric_difference.rs  types.rs  union.rs
src/geometries/multipolygon/: bounded.rs  difference.rs  from.rs  hash.rs  intersection.rs  locatable.rs  mod.rs  multipolygonal.rs  multipolygonal2.rs  multisegmental.rs  partial_eq.rs  relatable.rs  symmetric_difference.rs  types.rs  union.rs
src/geometries/multisegment/: bounded.rs  difference.rs  eq.rs  from.rs  hash.rs  intersection.rs  locatable.rs  mod.rs  multisegmental.rs  multisegmental2.rs  partial_eq.rs  relatable.rs  symmetric_difference.rs  types.rs  union.rs
src/geometries/point/: display.rs  elemental.rs  eq.rs  from.rs  hash.rs  mod.rs  ord.rs  partial_eq.rs  partial_ord.rs  types.rs
src/geometries/polygon/: bounded.rs  difference.rs  eq.rs  from.rs  hash.rs  intersection.rs  locatable.rs  mod.rs  multisegmental.rs  partial_eq.rs  types.rs  (+7 more)
src/python_binding/: cexact.rs  conversion.rs  crene.rs  impl_box_wrapper.rs  impl_constrained_delaunay_triangulation_wrapper.rs  impl_contour_wrapper.rs  impl_delaunay_triangulation_wrapper.rs  impl_empty_wrapper.rs  impl_multipolygon_wrapper.rs  impl_multisegment_wrapper.rs  impl_point_wrapper.rs  impl_polygon_wrapper.rs  impl_py_sequence.rs  impl_segment_wrapper.rs  impl_trapezoidation_wrapper.rs  reference.rs  slicing.rs  traits.rs  unpacking.rs
src/relating/: contour.rs  event.rs  events_queue_key.rs  linear.rs  mixed.rs  mod.rs  multipolygon.rs  multisegment.rs  multisegmental.rs  polygon.rs  segment.rs  segment_endpoints.rs  shaped.rs  sweep_line_key.rs  utils.rs
src/seidel/: edge.rs  locatable.rs  mod.rs  node.rs  trapezoid.rs  trapezoidation.rs
src/sweeping/: mod.rs  traits.rs
src/trapezoidation/: edge.rs  locatable.rs  node.rs  trapezoid.rs  trapezoidation.rs
src/triangulation/: constrained_delaunay.rs  delaunay.rs  mesh.rs  mod.rs  operations.rs  quad_edge.rs
tests/: conftest.py  hints.py  strategies.py  utils.py
tests/exact_tests/: hints.py  strategies.py
tests/location_tests/: strategies.py  test__eq__.py  test__hash__.py  test__ne__.py  test__repr__.py
tests/orientation_tests/: strategies.py  test__eq__.py  test__hash__.py  test__ne__.py  test__new__.py  test__repr__.py  test_repr.py
tests/relation_tests/: strategies.py  test__eq__.py  test__hash__.py  test__ne__.py  test__repr__.py  test_complement.py
(+154 files in other folders)
