[package]
name = "rene"
description = "Computational geometry."
license = "MIT"
version = "0.1.0-alpha"
edition = "2018"
repository = "https://github.com/lycantropos/rene"
rust-version = "1.66.0"

[lib]
name = "rene"
crate-type = ["cdylib", "rlib"]

[dependencies]
rithm = "^11.0.0"

[dependencies.traiter]
version = "^2.0.1"
features = ["numbers"]

[dependencies.pyo3]
version = "^0.18.1"
features = ["extension-module"]

[dependencies.pyo3-ffi]
version = "^0.18.1"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.18.0"
