[package]
name = "rene"
description = "Computational geometry."
license = "MIT"
version = "0.1.0-alpha"
edition = "2018"
repository = "https://github.com/lycantropos/rene"
rust-version = "1.71.0"

[lib]
name = "rene"
crate-type = ["cdylib", "rlib"]

[dependencies]
rithm = "^14.0.0"

[dependencies.traiter]
version = "^4.0.0"
features = ["numbers"]

[dependencies.pyo3]
version = "^0.19.0"
features = ["extension-module"]

[dependencies.pyo3-ffi]
version = "^0.19.0"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.19.0"
