[package]
description = "Computational geometry."
edition = "2018"
license = "MIT"
name = "rene"
repository = "https://github.com/lycantropos/rene"
rust-version = "1.74.0"
version = "0.1.0"

[lib]
name = "rene"
crate-type = ["cdylib", "rlib"]

[dependencies]
rithm = "^14.7.1"

[dependencies.traiter]
version = "^4.0.0"
features = ["numbers"]

[dependencies.pyo3]
version = "^0.27.2"
features = ["extension-module"]

[dependencies.pyo3-ffi]
version = "^0.27.2"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.27.2"
